intro UpstartTestAnnotation and UpstartLibraryTest